k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dev.local
    http:
      paths:
      - pathType: Prefix
        path: "/(.*)"
        backend:
          service:
            name: frontend
            port:
              number: 80
